no compile errors in the EnergyCalculator for now